# homophonic-analyzer

./: .gitignore  README.md  pyproject.toml
.github/workflows/: discord-notifs.yml  lint.yml  test.yml
data/: english_letter_frequencies.json
data/ciphers/: c_10000_10.json  c_10000_15.json  c_10000_20.json  c_10000_25.json  c_10000_30.json  c_10000_5.json  c_4000_10.json  c_4000_15.json  c_4000_20.json  c_4000_25.json  c_4000_30.json  c_4000_5.json  c_400_10.json  c_400_15.json  c_400_20.json  c_400_25.json  c_400_30.json  c_400_5.json  c_6000_10.json  c_6000_15.json  c_6000_20.json  c_6000_25.json  c_6000_30.json  c_6000_5.json  c_800_10.json  c_800_15.json  c_800_20.json  c_800_25.json  c_800_30.json  c_800_5.json  c_mono_4000.json  example_cipher_text.txt  test_cipher.json  z408.json
data/embeddings/: a-homophonic-cipher_cipher_embeddings.csv  a-homophonic-cipher_plaintext_embeddings.csv  cipher-10_cipher_embeddings.csv  cipher-10_mappings.csv  cipher-10_plaintext_embeddings.csv  cipher-11_cipher_embeddings.csv  cipher-11_mappings.csv  cipher-11_plaintext_embeddings.csv  cipher-12_cipher_embeddings.csv  cipher-12_mappings.csv  cipher-12_plaintext_embeddings.csv  cipher-13_cipher_embeddings.csv  cipher-13_mappings.csv  cipher-13_plaintext_embeddings.csv  cipher-14_cipher_embeddings.csv  cipher-14_mappings.csv  cipher-14_plaintext_embeddings.csv  cipher-15_cipher_embeddings.csv  cipher-15_mappings.csv  cipher-15_plaintext_embeddings.csv  cipher-16_cipher_embeddings.csv  cipher-16_mappings.csv  cipher-16_plaintext_embeddings.csv  cipher-17_cipher_embeddings.csv  cipher-17_mappings.csv  cipher-17_plaintext_embeddings.csv  cipher-18_cipher_embeddings.csv  cipher-18_mappings.csv  cipher-18_plaintext_embeddings.csv  cipher-19_cipher_embeddings.csv  cipher-19_mappings.csv  cipher-19_plaintext_embeddings.csv  cipher-20_cipher_embeddings.csv  cipher-20_mappings.csv  cipher-20_plaintext_embeddings.csv  cipher-21_cipher_embeddings.csv  cipher-21_mappings.csv  cipher-21_plaintext_embeddings.csv  cipher-22_cipher_embeddings.csv  cipher-22_mappings.csv  (+51 more)
data/example_ciphers/: cipher-1.json  cipher.json
src/: constants.py  load_cipher.py  main.py  test_rotation.py  utils.py
src/analyzer/: analyze.py  backtracking.py  feasibility.py  pruning.py
src/experiments/: embeddings.py  test_rotation.py
src/hill_climbing/: hill_climbing.py
src/utils/: constants.py  embeddings.py  evaluation.py  logging.py
test/: test_load_cipher.py  test_utils.py
test/analyzer/: test_analyze.py  test_backtracking.py  test_feasibility.py  (+1 more)
tests/: load_cipher_test.py  test_load_cipher.py
(+11 files in other folders)
