[project]
name = "homophonic-analyzer"
version = "0.1.0"
description = "A smart frequency analysis tool for homophonic substitution ciphers."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy",
]

[tool.pytest.ini_options]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.13.1",
]
