[project]
name = "homophonic-analyzer"
version = "0.1.0"
description = "A smart frequency analysis tool for homophonic substitution ciphers."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["test"]
addopts = "-v --tb=short --cov=src --cov-report=term-missing"

[tool.coverage.run]
omit = ["src/main.py"]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.13.1",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
exclude = ["venv", ".venv", "__pycache__", "build", "dist", ".eggs", "*.egg", ".mypy_cache", ".pytest_cache"]
select = ["E", "F", "W", "C90", "B", "B9", "ANN", "COM", "D", "ERA", "ISC", "N", "Q000", "S", "SIM", "TID251", "UP", "YTT", "T"]
ignore = [
	"W191",  # indentation contains tabs
	"S311",  # Standard pseudo-random generators are not suitable for security/cryptographic purposes
	"D206",  # Docstring should be indented with spaces equal to the surrounding code
	"D100",  # Missing docstring in public module
	"D104",  # Missing docstring in public package
	"D203",  # incorrect-blank-line-before-class
	"D213",  # multi-line-summary-second-line
	"ANN401",# Dynamically typed expressions are disallowed
]

[tool.ruff.lint.per-file-ignores]
"test/**/*.py" = [
    "S101",    # Use of assert detected
    "D",       # All docstring rules
    "ANN",     # All type annotation rules
	"E501",   # Line too long
	"COM812",  # Missing trailing comma in a list or dict
	"ERA001", # Found commented-out code
]
[tool.ruff.format]
indent-style = "tab"